Tweaked the Presenting Issue controller
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@89 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -12,7 +12,9 @@
 </head>
 <body>
 <div>
-<%= link_to 'Email Accounts', :controller => 'account', :action => 'index'%> |
+<%= link_to 'Presenting Issues', :controller => 'presenting_issue', :action => 'index'%> |
+<%= link_to 'New Call', :controller => 'call', :action => 'new'%> |
+<%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
 </div>
 
 <% if flash[:notice] -%>
