Some more tweaks...nightly checkin. This is the first demo candidate
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@92 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -1,5 +1,5 @@
 <ol class="form" <%= 'style="display: none;"' if columns.collapsed -%>>
-  Your are logged in as: <%= current_user.login -%>
+  <li class="form-element ">Your are logged in as: <%= current_user.login -%>
   <% columns.each :for => @record do |column| -%>
   <% if is_subsection? column -%>
   <li class="sub-section">
