Temp check in, added client controller, type of call controller etc
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@96 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -11,11 +11,12 @@
 
 </head>
 <body>
-<h1>Contacy Youth LIFELINE</h1>
+<h1>Contact Youth LIFELINE</h1>
 <div>
 <%= link_to 'New Call', :controller => 'call', :action => 'new'%> |
 <%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Edit Presenting Issues', :controller => 'presenting_issue', :action => 'index'%> |
+<%= link_to 'Logout', :controller => 'account', :action => 'logout' %> |
 <%= link_to 'Create New Logon', :controller => 'account', :action => 'signup' %> 
 </div>
 
