Added AJAX lookups on client name (required the auto_complete plugin & scriptaculous)
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@102 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "scriptaculous" %>
+
 <ol class="form" <%= 'style="display: none;"' if columns.collapsed -%>>
   <li class="form-element ">Your are logged in as: <%= current_user.login -%>
   <% columns.each :for => @record do |column| -%>
