Added lots, including broken auto_completer stuff
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@104 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -16,6 +16,7 @@
 <%= link_to 'New Call', :controller => 'call', :action => 'new'%> |
 <%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Clients', :controller => 'client', :action => 'index'%> |
+<%= link_to 'Client Histories', :controller => 'client_history', :action => 'index'%> |
 <%= link_to 'Edit Presenting Issues', :controller => 'presenting_issue', :action => 'index'%> |
 <%= link_to 'Logout', :controller => 'account', :action => 'logout' %> |
 <%= link_to 'Create New Logon', :controller => 'account', :action => 'signup' %> 
