--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -14,9 +14,12 @@
 <h1>Contact Youth LIFELINE</h1>
 <div>
 <%= link_to 'New Call', :controller => 'call', :action => 'new'%> |
+<%= link_to 'New Client History', :controller => 'client_history', :action => 'new'%> |
+<%= link_to 'New Call Out', :controller => 'call_out', :action => 'new'%> |
 <%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Clients', :controller => 'client', :action => 'index'%> |
 <%= link_to 'Client Histories', :controller => 'client_history', :action => 'index'%> |
+<%= link_to 'Calls Out', :controller => 'call_out', :action => 'new'%> |
 <%= link_to 'Edit Presenting Issues', :controller => 'presenting_issue', :action => 'index'%> |
 <%= link_to 'Logout', :controller => 'account', :action => 'logout' %> |
 <%= link_to 'Create New Logon', :controller => 'account', :action => 'signup' %> 
