--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -1,7 +1,12 @@
 <%= javascript_include_tag "scriptaculous" %>
 
 <ol class="form" <%= 'style="display: none;"' if columns.collapsed -%>>
-  <li class="form-element ">Your are logged in as: <%= current_user.login -%>
+  <li class="form-element ">
+	<dl>
+	<dt><label>Your are logged in as:</label></dt>
+	<dd><label><%= current_user.login -%></label></dd>
+	</dl>
+  </li>
   <% columns.each :for => @record do |column| -%>
   <% if is_subsection? column -%>
   <li class="sub-section">
