Presenting Issues control mostly working..
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@112 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "scriptaculous" %>
+<%= javascript_include_tag :defaults %>
 
 <ol class="form" <%= 'style="display: none;"' if columns.collapsed -%>>
   <li class="form-element ">
