Lots of changes, for Issue #97, http://redmine.sla-mobile.com/issues/show/97 Client History reworked into Risk Assessments, reverse population not started.
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@133 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -14,11 +14,11 @@
 <h1>Contact Youth LIFELINE</h1>
 <div>
 <%= link_to 'New Call', :controller => 'call', :action => 'new'%> |
-<%= link_to 'New Client History', :controller => 'client_history', :action => 'new'%> |
+<%= link_to 'New Risk Assessment', :controller => 'risk_assessment', :action => 'new'%> |
 <%= link_to 'New Call Out', :controller => 'call_out', :action => 'new'%> |
 <%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Clients', :controller => 'client', :action => 'index'%> |
-<%= link_to 'Client Histories', :controller => 'client_history', :action => 'index'%> |
+<%= link_to 'Risk Assessments', :controller => 'risk_assessment', :action => 'index'%> |
 <%= link_to 'Calls Out', :controller => 'call_out', :action => 'new'%> |
 <%= link_to 'Edit Presenting Issues', :controller => 'presenting_issue', :action => 'index'%> |
 <%= link_to 'Logout', :controller => 'account', :action => 'logout' %> |
