--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -1,4 +1,13 @@
 <%= javascript_include_tag :defaults %>
+<div id="hang_up_div">
+  <%= link_to( "Hang Up",  :action => :hang_up ) %>
+</div>
+<div id="silence_div">
+  <%= link_to( "Silence", :action => :silence ) %>
+</div>
+<div id="wrong_no_div">
+  <%= link_to( "Wrong Number", :action => :wrong_no ) %>
+</div>
 
 <ol class="form" <%= 'style="display: none;"' if columns.collapsed -%>>
   <li class="form-element ">
