Extended controllers & model_auto_completer to support passing in default paramters/options to a form. Part of Issue #95 - to support adding client info (calls, RA, calls out) etc
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@140 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/client/_show.rhtml
+++ b/app/views/client/_show.rhtml
@@ -5,10 +5,11 @@
 <div style="float:right;">
   <%= link_to "Add New Call", { :controller => "call", 
                                 :action => "new", 
-                                :client_id => @client.object_id } %> | 
-  <%= link_to "Add New Risk Assessment", { :action => "new_risk_assessment", 
-                                              :client_id => @client.object_id } %> | 
-  <%= link_to "Add New Call Out", { :action => "new_call", :client_id => @client.object_id } %>
+                                :client_id => params[:id] } %> | 
+  <%= link_to "Add New Call Out", { :controller => "call_out", :action => "new", :client_id => params[:id] } %> | 
+  <%= link_to "Add New Risk Assessment", { :controller => "risk_assessment", 
+                                            :action => "new", 
+                                            :client_id => params[:id] } %> | 
 </div>
 
 <%= render :partial => 'show_columns', :locals => {:columns => active_scaffold_config.show.columns} -%>
