--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -1,9 +1,11 @@
 <%= javascript_include_tag :defaults %>
-<div id="quick_close_links" style="float:right; width:250px;">
+<% if @_params['action'] == 'new'  -%>
+<div id="quick_close_links" style="float:right; width:300px;">
     <%= link_to( "Hang Up",  :action => :hang_up ) %>
     <%= link_to( "Silence", :action => :silence ) %>
     <%= link_to( "Wrong Number", :action => :wrong_no ) %>
 </div>
+<% end -%>
 
 <ol class="form" <%= 'style="display: none;"' if columns.collapsed -%>>
   <li class="form-element ">
