--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -19,6 +19,8 @@
 <%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Clients', :controller => 'client', :action => 'index'%> |
 <%= link_to 'Risk Assessments', :controller => 'risk_assessment', :action => 'index'%> |
+<%= link_to 'Allocations', :controller => 'allocation', :action => 'index'%> |
+<%= link_to 'Allocate New Service', :controller => 'allocation', :action => 'new'%> |
 <%= link_to 'Calls Out', :controller => 'call_out', :action => 'new'%> |
 <%= link_to 'Logout', :controller => 'account', :action => 'logout' %> |
 </div>
