--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -13,10 +13,10 @@
 <body>
 <h1>Contact Youth LIFELINE</h1>
 <div>
-<%= link_to 'New Call', :controller => 'call', :action => 'new'%> |
+<%= link_to 'New Call In', :controller => 'call', :action => 'new'%> |
 <%= link_to 'New Risk Assessment', :controller => 'risk_assessment', :action => 'new'%> |
 <%= link_to 'New Call Out', :controller => 'call_out', :action => 'new'%> |
-<%= link_to 'Calls', :controller => 'call', :action => 'index'%> |
+<%= link_to 'Calls In', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Clients', :controller => 'client', :action => 'index'%> |
 <%= link_to 'Risk Assessments', :controller => 'risk_assessment', :action => 'index'%> |
 <%= link_to 'Allocations', :controller => 'allocation', :action => 'index'%> |
