addition of new client link and signup link
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@157 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -18,10 +18,12 @@
 <%= link_to 'New Call Out', :controller => 'call_out', :action => 'new'%> |
 <%= link_to 'Calls In', :controller => 'call', :action => 'index'%> |
 <%= link_to 'Clients', :controller => 'client', :action => 'index'%> |
+<%= link_to 'New Clients', :controller => 'client', :action => 'new'%> |
 <%= link_to 'Risk Assessments', :controller => 'risk_assessment', :action => 'index'%> |
 <%= link_to 'Allocations', :controller => 'allocation', :action => 'index'%> |
 <%= link_to 'Allocate New Service', :controller => 'allocation', :action => 'new'%> |
 <%= link_to 'Calls Out', :controller => 'call_out', :action => 'new'%> |
+<%= link_to 'Sign Up', :controller => 'account', :action => 'signup'%> |
 <%= link_to 'Logout', :controller => 'account', :action => 'logout' %> |
 </div>
 
