check in to compare with JW
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@172 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/client/show.rhtml
+++ b/app/views/client/show.rhtml
@@ -2,16 +2,16 @@
   <div class="show-view view">
     <%= render :partial => 'show' -%>
     <div>
-      <%= render :active_scaffold => 'call', :conditions => ['client_id = ?', @client.object_id] %>
+      <%= render :active_scaffold => 'call', :conditions => ['client_id = ?', @client.id] %>
     </div>
     <div>
-      <%= render :active_scaffold => 'call_out', :conditions => ['client_id = ?', @client.object_id] %>
+      <%= render :active_scaffold => 'call_out', :conditions => ['client_id = ?', @client._id] %>
     </div>
     <div>
-      <%= render :active_scaffold => 'risk_assessment', :conditions => ['client_id = ?', @client.object_id] %>
+      <%= render :active_scaffold => 'risk_assessment', :conditions => ['client_id = ?', @client.id] %>
     </div>
     <div>
-      <%= render :active_scaffold => 'allocation', :conditions => ['client_id = ?', @client.object_id] %>
+      <%= render :active_scaffold => 'allocation', :conditions => ['client_id = ?', @client.id] %>
     </div>
   </div>
 </div>
