--- a/app/views/client/_show.rhtml
+++ b/app/views/client/_show.rhtml
@@ -2,19 +2,21 @@
   <h4>Client Details</h4>
 </div>
 
+<%#
 <div style="float:right;">
   <%= link_to "Add New Call", { :controller => "call", 
                                 :action => "new", 
                                 :client_id => params[:id] } %> | 
-  <%= link_to "Add New Call Out", { :controller => "call_out", :action => "new", :client_id => params[:id] } %> | 
-  <%= link_to "Add New Risk Assessment", { :controller => "risk_assessment", 
+<%#  <%= link_to "Add New Call Out", { :controller => "call_out", :action => "new", :client_id => params[:id] } %> | 
+  <%#= link_to "Add New Risk Assessment", { :controller => "risk_assessment", 
                                             :action => "new", 
                                             :client_id => params[:id] } %> | 
-  <%= link_to "Add New Allocation Service", { :controller => "allocation", 
+  <%#= link_to "Add New Allocation Service", { :controller => "allocation", 
                                             :action => "new", 
                                             :client_id => params[:id] } %> | 
+                                            <%#
 </div>
-
+#%>
 <%= render :partial => 'show_columns', :locals => {:columns => active_scaffold_config.show.columns} -%>
 
 <p class="form-footer">
