--- a/app/views/client/_show_columns.rhtml
+++ b/app/views/client/_show_columns.rhtml
@@ -5,7 +5,7 @@
     <dd><%= render :partial => 'show_columns' %></dd>
   <% else -%>
     <dt><%= column.label -%></dt>
-    <dd><%= get_column_value(@record, column) -%> &nbsp;</dd>
+    <dd><%= get_column_value(@client, column) -%> &nbsp;</dd>
   <% end -%>
 <% end -%>
 </dl>
