--- a/app/views/client/show.rhtml
+++ b/app/views/client/show.rhtml
@@ -5,7 +5,7 @@
       <%= render :active_scaffold => 'call', :conditions => ['client_id = ?', @client.id] %>
     </div>
     <div>
-      <%= render :active_scaffold => 'call_out', :conditions => ['client_id = ?', @client._id] %>
+      <%= render :active_scaffold => 'call_out', :conditions => ['client_id = ?', @client.id] %>
     </div>
     <div>
       <%= render :active_scaffold => 'risk_assessment', :conditions => ['client_id = ?', @client.id] %>
