edits for new release
git-svn-id: https://jump.sla-mobile.com/svn_prototypes/lifeline/trunk@184 a365057f-8f2b-0410-9532-a223011ada3c

--- a/app/views/call/_form.rhtml
+++ b/app/views/call/_form.rhtml
@@ -3,7 +3,7 @@
 <div id="quick_close_links" style="float:right; width:300px;">
     <%= link_to( "Hang Up",  :action => :hang_up ) %> |
     <%= link_to( "Silence", :action => :silence ) %> |
-    <%= link_to( "Wrong Number", :action => :wrong_no ) %> |
+    <%= link_to( "Testing Call", :action => :wrong_no ) %> |
   </div>
   
   <% end -%>
