--- a/app/views/client/_show.rhtml
+++ b/app/views/client/_show.rhtml
@@ -6,14 +6,14 @@
 <div style="float:right;">
   <%= link_to "Add New Call", { :controller => "call", 
                                 :action => "new", 
-                                :client_id => params[:id] } %> | 
-<%#  <%= link_to "Add New Call Out", { :controller => "call_out", :action => "new", :client_id => params[:id] } %> | 
+                                :client_id => params[:id] } %>  
+<%#  <%= link_to "Add New Call Out", { :controller => "call_out", :action => "new", :client_id => params[:id] } %>  
   <%#= link_to "Add New Risk Assessment", { :controller => "risk_assessment", 
                                             :action => "new", 
-                                            :client_id => params[:id] } %> | 
+                                            :client_id => params[:id] } %>  
   <%#= link_to "Add New Allocation Service", { :controller => "allocation", 
                                             :action => "new", 
-                                            :client_id => params[:id] } %> | 
+                                            :client_id => params[:id] } %>  
                                             <%#
 </div>
 #%>
